# advent-of-code-2024

./: .gitignore  CMakeLists.txt
day2/: main.cpp
day3/: main.cpp
day4/: main.cpp
ds/: heap.cpp  heap.hpp  heap_test.cpp  list.cpp  list.hpp  list_test.cpp
lib/: extract.cpp
